--- a/app/views/store-instance-packing.html
+++ b/app/views/store-instance-packing.html
@@ -74,13 +74,15 @@
                 name="itemSortBy"
                 class="form-control"
                 ng-model="itemSortOrder"
-                id="itemSortBy">
+                id="itemSortBy"
+                ng-change="changePicklistOrder(itemSortOrder)">
       		    <option value="[salesCategoryName,itemName]">Sales Category</option>
           		<option value="itemName">Item Name</option>
+          		<option value="[menuVersionId, sortOrder]">Items in Menu</option>
        		 </select>
  	       </div>
         </div>
-
+{{pickListOrder}}
       <div class="table-responsive">
         <table class="table pick-list">
         <thead>
@@ -100,8 +102,8 @@
         </thead>
 
         <tbody>
-        <tr ng-repeat="item in pickListItems | filter:{itemDescription: itemFilterText} | orderBy:itemSortOrder" ng-class="showVarianceWarningClass(item)" class="item-{{item.itemMasterId}}">
-          <td>
+        <tr ng-repeat="item in pickListItems | filter:{itemDescription: itemFilterText} | orderBy:pickListOrder" ng-class="showVarianceWarningClass(item)" class="item-{{item.itemMasterId}}">
+          <td> {{item.menuVersionId}} {{item.sortOrder}}
             <input type="text" class="form-control" ng-model="item.itemDescription"
                    disabled/>
           </td>
@@ -259,6 +261,7 @@
                 id="itemSortBy">
       		    <option value="[salesCategoryName,itemName]">Sales Category</option>
           		<option value="itemName">Item Name</option>
+              <option value="sortOrder">Items in Menu</option>
        		 </select>
  	       </div>
 
