TS5PORTAL-180 - Remove debugging parameters

--- a/app/views/store-instance-review.html
+++ b/app/views/store-instance-review.html
@@ -29,21 +29,9 @@
           <accordion-heading class="accordion-heading">
             {{getTitleFor('items')}} <i ng-class="{'fa-chevron-down': status.items.open, 'fa-chevron-right': !status.items.open}" class="fa"></i>
           </accordion-heading>
-          <div class="row">
-      	  	<div class="col-xs-8 text-right">
-          	<span>Sort By</span>
+          <div class="row"><div class="col-xs-8 text-right">
  	  	     </div>
-        	 <div class="col-xs-2 text-right" >
-  		     <select
-  		          type="text"
-                name="itemSortBy"
-                class="form-control"
-                ng-model="itemSortOrder"
-                id="itemSortBy">
-      		    <option value="[salesCategoryName,itemName]">Sales Category</option>
-          		<option value="itemName">Item Name</option>
-  	     		</select>
-	 	        </div>
+        	 <div class="col-xs-2 text-right"></div>
 
             <div class="col-xs-2 text-right">
               <button type="button" class="btn btn-info" ng-click="redirectTo('Packing')">Edit</button>
@@ -65,7 +53,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="item in items | filter:{itemDescription: itemFilterText} | orderBy:itemSortOrder"
+            <tr ng-repeat="item in items | filter:{itemDescription: itemFilterText} | orderBy:'sortOrder'"
                 ng-class="hasDiscrepancy(item)" ng-switch on="action">
               <td>
                 <input type="text" class="form-control" ng-model="item.itemDescription" disabled>
