--- a/app/views/report-options.html
+++ b/app/views/report-options.html
@@ -13,10 +13,12 @@
          <p ng-show="reportOptions.name.$error.required">Name is required.</p>
       </div>
     </div>
-    
+    <div class="form-group" ng-if="errMessageDatePicker">
+      	<span> {{ errMessageDatePicker }} </span>
+    </div>
     <div ng-repeat="option in template.options" class="form-group" ng-switch on="option.type">
       <label class="col-sm-4 control-label">{{option.prompt}}: <span ng-if="!option.optional" style="color:red">*</span></label>
-      <span ng-switch-when="DATE" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
+      <span ng-switch-when="DATE" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': errMessageDatePicker || reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
         <input type="text" class="form-control" name="{{option.code}}" ng-model="selection.options[option.code]" datepicker-popup="{{format}}"
                datepicker-options="dateOptions" ng-required="!option.optional" close-text="Close" is-open="status.opened"/> <!-- -->
         <span class="input-group-btn">
@@ -39,7 +41,7 @@
           </ui-select-choices>
         </ui-select>
         <span ng-if="!option.multiValue && !option.choiceLookup" ng-class="{'has-error': reportOptions[option.code].$invalid && reportOptions[option.code].$dirty}">
-          <input type="number" name="{{option.code}}" min="1" oninput="if(value.length>16)value=value.slice(0,16)" ng-pattern="regexp.positiveNumber" class="form-control" ng-model="selection.options[option.code]" ng-trim="true" placeholder="{{option.code}}" />
+          <input type="number" name="{{option.code}}" min="1" oninput="if(value.length>16)value=value.slice(0,16)" ng-pattern="regexp.positiveNumber" class="form-control" ng-model="selection.options[option.code]" ng-trim="true" />
           <div ><span ng-bind-html="choice.code | highlight: $select.search"/><span ng-if="choice.description !== undefined"> (<span ng-bind-html="choice.description | highlight: $select.search"/>)</span></div>
         </span>
       </span>
