--- a/app/views/schedule-report.html
+++ b/app/views/schedule-report.html
@@ -46,11 +46,9 @@
       </span>
     </div>
     
-   
-    
     <div class="form-group">
      <label class="col-sm-4 control-label">Recurrence Start Date:	<span style="color:red">*</span></label>
-     <span class="col-sm-6 input-group" ng-class="{'has-error': scheduleReport.name.$invalid}"  ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': scheduleReport[option.code].$invalid && scheduleReport[option.code].$dirty}">
+     <span class="col-sm-6 input-group" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': errRecurrenceDatePicker || scheduleReport[option.code].$invalid && scheduleReport[option.code].$dirty}">
        <input type="text" class="form-control" name="" ng-model="scheduleReport.recurrenceStartDate" ng-required="true"  
                datepicker-popup="{{format}}" min-date="today"
                datepicker-options="dateOptions" ng-required="true" close-text="Close" is-open="status.opened"  /> <!-- -->
@@ -61,12 +59,14 @@
       <div ng-if="scheduleReport.name.$error && scheduleReport.name.$dirty">
          <p ng-show="scheduleReport.name.$error.required">Date is required.</p>
       </div>
+      <div class="reportErrorMessage" ng-if="errRecurrenceDatePicker">
+      	<span> {{ errRecurrenceDatePicker }} </span>
       </div>
-   
+      </div>   
     
      <div class="form-group">
       <label class="col-sm-4 control-label">Recurrence End Date:	 <span style="color:red">*</span></label>
-        <span class="col-sm-6 input-group" ng-class="{'has-error': scheduleReport.name.$invalid}"  ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': scheduleReport[option.code].$invalid && scheduleReport[option.code].$dirty}">
+        <span class="col-sm-6 input-group" ng-controller="OptionSelectionDateCtrl" class="col-sm-6 input-group" ng-class="{'has-error': errRecurrenceDatePicker || scheduleReport[option.code].$invalid && scheduleReport[option.code].$dirty}">
        <input type="text" class="form-control" name="" ng-model="scheduleReport.recurrenceEndDate" ng-required="true" 
        		   datepicker-popup="{{format}}" min-date="today"
                datepicker-options="dateOptions" ng-required="true" close-text="Close" is-open="status.opened"/> <!-- -->
