REPO-510 | CSS update

--- a/app/styles/_modals.scss
+++ b/app/styles/_modals.scss
@@ -97,3 +97,10 @@
   border-bottom-color: #EEEEEE;
   background-color: #FAFAFA;
 }
+
+/* ----- MODAL STYLE FOR REPORT DATE ERROR MESSAGE ----- */
+.reportErrorMessage  {
+    float: none;
+    padding-left: 200px;
+    color: red;
+}
